# ZK-EVM

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/evm/: Cargo.toml
crates/evm/src/: errors.rs  interpreter.rs  lib.rs  opcodes.rs  state.rs
crates/evm/tests/: add.rs  dup1.rs  it_compiles.rs  mul.rs  pop.rs  push1.rs  revm_oracle.rs  stop.rs  sub.rs  swap1.rs
crates/host/: Cargo.toml  build.rs
crates/host/src/: main.rs
crates/prover/: Cargo.toml
crates/prover/src/: main.rs
programs/: add.hex  arith.hex
